@@ -25,7 +25,7 @@
 
  \section{Requirements}{
    This package requires external packages
-   R.methodsS3 (>= 1.2.1), R.utils (>= 1.10.0), DNAcopy (>= 1.24.0), utils,
+   R.methodsS3 (>= 1.2.1), R.utils (>= 1.11.0), DNAcopy (>= 1.24.0), utils,
    and also suggests DNAcopy (>= 1.24.0), aroma.light (>= 1.22.0), matrixStats (>=
 0.4.3), R.oo (>= 1.8.3), R.cache (>= 0.6.1), digest (>= 0.5.1),
 Hmisc (>= 3.8-3).
