@@ -31,7 +31,7 @@
   \item{alpha}{A \code{\link[base]{double}} in [0,0.5] specifying the significance level
     of the confidence intervals used.}
   \item{...}{Additional arguments passed to
-             \code{\link[PSCBS:getStatsForCopyNeutralABs.PairedPSCBS]{*getStatsForCopyNeutralABs}()}.}
+             \code{\link[PSCBS:calcStatsForCopyNeutralABs.PairedPSCBS]{*calcStatsForCopyNeutralABs}()}.}
   \item{force}{If \code{\link[base:logical]{TRUE}}, an already called object is skipped, otherwise not.}
   \item{verbose}{See \code{\link[R.utils]{Verbose}}.}
 }
